@@ -4,6 +4,7 @@
 
 ** Added
 
+- imenu support for headings
 - =inform7-mode= for editing Inform 7 files
 - support for detecting Inform 7 (=.ni=, =.i7=) and Inform 7
   extension (=.i7x=) files
